--- a/css/main/main.css
+++ b/css/main/main.css
@@ -3,7 +3,7 @@ main {
   flex-direction: column;
   gap: 3.5rem;
   padding: 2rem 7rem 14rem;
-  background: #EDEDED;
+  background: #ededed;
 }
 
 .navbar {
@@ -21,7 +21,7 @@ main {
   width: 12.5rem;
   padding: 1rem;
   background: #fff;
-  color: #1B1B1B;
+  color: #1b1b1b;
 }
 
 .dropdown-toggle:hover {
@@ -32,29 +32,33 @@ main {
 .dropdown-toggle:focus {
   background: #fff;
   border: none;
-  color: #1B1B1B;
+  color: #1b1b1b;
 }
 
 .dropdown-toggle.show {
-  border-radius: 11px 11px 0 0
+  border-radius: 11px 11px 0 0;
 }
 
 .dropdown-menu.show {
   display: flex;
   flex-direction: column;
   align-items: center;
+  max-height: 300px;
+  overflow: scroll;
   border: none;
   margin-top: 0;
   margin-bottom: 0;
-  border-radius: 0 0 11px 11px
+  border-radius: 0 0 11px 11px;
 }
 
 .dropdown_search {
-  margin: .25rem 0 1rem 0;
-  padding: .25rem;
+  margin: 0.25rem 0 1rem 0;
+  padding: 0.25rem;
   border-radius: 2px;
-  border: 1px solid var(--Light-Grey, #C6C6C6);
+  border: 1px solid var(--Light-Grey, #c6c6c6);
   font-size: 1rem;
+  width: auto;
+  max-width: 180px;
 }
 
 .dropdown_search_btn {
@@ -66,10 +70,9 @@ main {
   width: 1rem;
   height: 1rem;
   flex-shrink: 0;
-  color: #7A7A7A;
+  color: #7a7a7a;
   background: #fff;
 }
-
 
 .dropdown-item {
   width: 12.5rem;
@@ -78,12 +81,26 @@ main {
 }
 
 .dropdown-item:hover {
-  background: #FFD15B;
-  ;
+  background: #ffd15b;
+}
+
+.badge-bg {
+  color: #000 !important;
+  background: #ffd15b;
+  max-width: 200px;
+}
+
+.badge-bg:hover {
+  font-weight: 700;
+}
+
+.badge-container {
+  display: flex;
+  gap: 5px;
 }
 
 .total-recipe {
-  color: var(--Black, #1B1B1B);
+  color: var(--Black, #1b1b1b);
   font-family: Anton;
   font-size: 21px;
   font-style: normal;
